--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: Jekyll Theme Minimal Resume
 username:Spyros Poulos
 user_description: I am an analytics professional with experience in large scale projects.
 email: spr.poulos@gmail.com
-# twitter_username: Spy86887664
+twitter_username: Spy86887664
 instagram_username: spyros_poulos
 facebook_username: pyros.poulos.5
 linkedin_username: spyros-poulos
